# kien-thai

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  RTK.md  ace.toml  pyproject.toml
corpus/: README.md  RESUME.md
evals/: evals.json
notes/: chrome-session-2026-05-13.md  feedback-2026-05-21-application.md  framing-investigation-2026-05-21.md  proposals-2026-05-13.md  research-queue.md  session-2026-05-10-contributing-review.md  session-2026-05-11-iteration-7-review.md  session-2026-05-19-checkpoint.md  session-2026-05-21-checkpoint.md  source-vetting-2026-05-13.md  work-queue.md
notes/judgements/: 2026-05-10-english-prose-economy-lens.md  2026-05-10-politeness-not-ai-tell.md  2026-05-11-cognitive-vs-affective-verbs.md  2026-05-11-frame-rules-have-idiomatic-edges.md  2026-05-11-person-deixis-discourse-over-syntax.md  README.md
skills/kien-thai/: SKILL.md
skills/kien-thai/references/: ai-tells.md  anti-patterns.md  audit-checklist.md  craft.md  (+6 more)
skills/kode-thai/: SKILL.md
skills/thai-prose/: SKILL.md
tests/: conftest.py  lib.py  test_quant.py  test_sanity.py  test_skill_consistency.py
tests/generate/: conftest.py  test_claude.py  test_codex.py
workspace/iteration-1/: feedback.md
workspace/iteration-2/: PLAN.md  REVIEW.md  audit-gaps.md
workspace/iteration-3/: RESUME.md
workspace/iteration-7/: feedback.md
workspace/token-audit/: 00-cost-map.md  01-skill-md.md  02-ai-tells.md  03-register.md  04-examples.md  05-style-and-craft.md  06-grammar-forbidden-anti.md  07-prompts-and-caching.md  08-synthesis.md  IMPLEMENTATION.md  README.md
(+2 files in other folders)
